--- a/index.css
+++ b/index.css
@@ -12,4 +12,23 @@ nav{
 .logo{
     margin-left: 40px;
 }
-
+#mainpart h2{
+    font-size:40px ;
+}
+#mainpart p{
+    color: grey;
+    font-size: 20px;
+}
+#firstimage img{
+    border-radius: 100px;
+    border: 5px solid blue;
+}
+.first{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#firstimage{
+    flex-direction: column;
+    float:right;
+}
