--- a/index.css
+++ b/index.css
@@ -32,3 +32,9 @@ nav{
     flex-direction: column;
     float:right;
 }
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 20;
+}
