--- a/index.css
+++ b/index.css
@@ -21,20 +21,60 @@ nav{
 }
 #firstimage img{
     border-radius: 100px;
-    border: 5px solid blue;
+    border: 1px;
+    box-shadow: 0 0 5px 5px rgba(0, 0,255 , 0.15);
 }
 .first{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    height: 430px;
 }
 #firstimage{
     flex-direction: column;
     float:right;
 }
 .container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 40px;
+}
+#about{
+    margin-top:8cm;
+    margin-bottom: 8cm;
+}
+
+#aboutus{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 20;
+    justify-content: space-around;
+}
+.card{
+    background-color: antiquewhite;
+    border:1px solid blanchedalmond;
+    border-radius: 8px;
+    padding: 20px;
+}
+.cardsfirst img{
+    border-radius: 8px;
+}
+.cards img{
+    border-radius: 8px;
+    height: 180px;
+    width: 280px;
+    justify-content: center;
+}
+#services{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 40px;
+    margin-left: 2cm;
+    
+}
+.cards h5{
+    text-align: center;
+    color: blueviolet;
+
+}
+.cards{
+    background-color: whitesmoke;
 }
